# kiran-cc-daemon

./: .gitlab-ci.yml  CMakeLists.txt  README.en.md  README.md  config.h.in
data/: CMakeLists.txt  com.kylinsec.Kiran.Appearance.gschema.xml  com.kylinsec.Kiran.Display.gschema.xml  com.kylinsec.Kiran.Keyboard.gschema.xml  com.kylinsec.Kiran.Mouse.gschema.xml  com.kylinsec.Kiran.Power.gschema.xml  com.kylinsec.Kiran.SessionDaemon.Bluetooth.service.in  com.kylinsec.Kiran.SessionDaemon.Display.service.in  com.kylinsec.Kiran.SessionDaemon.Keybinding.service.in  com.kylinsec.Kiran.SessionDaemon.Keyboard.service.in  com.kylinsec.Kiran.SessionDaemon.Mouse.service.in  com.kylinsec.Kiran.SessionDaemon.Network.service.in  com.kylinsec.Kiran.SessionDaemon.Power.policy.in.in  com.kylinsec.Kiran.SessionDaemon.TouchPad.service.in  com.kylinsec.Kiran.SessionDaemon.XSettings.service.in  com.kylinsec.Kiran.SystemDaemon.Accounts.conf  com.kylinsec.Kiran.SystemDaemon.Accounts.policy.in  com.kylinsec.Kiran.SystemDaemon.Accounts.service.in  com.kylinsec.Kiran.SystemDaemon.Greeter.conf  com.kylinsec.Kiran.SystemDaemon.Greeter.policy.in  com.kylinsec.Kiran.SystemDaemon.Greeter.service.in  com.kylinsec.Kiran.SystemDaemon.GreeterSettings.conf  com.kylinsec.Kiran.SystemDaemon.GreeterSettings.policy.in  com.kylinsec.Kiran.SystemDaemon.GreeterSettings.service.in  com.kylinsec.Kiran.SystemDaemon.Groups.conf  com.kylinsec.Kiran.SystemDaemon.Groups.policy.in  com.kylinsec.Kiran.SystemDaemon.SystemInfo.conf  com.kylinsec.Kiran.SystemDaemon.SystemInfo.policy.in  com.kylinsec.Kiran.SystemDaemon.SystemInfo.service.in  com.kylinsec.Kiran.SystemDaemon.TimeDate.conf  com.kylinsec.Kiran.SystemDaemon.TimeDate.policy.in  com.kylinsec.Kiran.SystemDaemon.TimeDate.service.in  com.kylinsec.Kiran.SystemDaemon.Upgrade.conf  com.kylinsec.Kiran.SystemDaemon.Upgrade.policy.in  com.kylinsec.Kiran.SystemDaemon.conf  com.kylinsec.Kiran.SystemDaemon.service.in  com.kylinsec.Kiran.TouchPad.gschema.xml  com.kylinsec.Kiran.XSettings.gschema.xml  com.kylinsec.kiran.appearance.gschema.xml.in  com.kylinsec.kiran.display.gschema.xml.in  (+26 more)
data/keybindings/: 00-multimedia-key.xml  01-desktop-extend-key.xml  01-desktop-key.xml  50-accessibility.xml
data/schemas/: com.kylinsec.kiran.appearance.gschema.xml.in  com.kylinsec.kiran.disk-space.gschema.xml.in  com.kylinsec.kiran.display.gschema.xml.in  com.kylinsec.kiran.keyboard.gschema.xml.in  com.kylinsec.kiran.keys.gschema.xml.in  com.kylinsec.kiran.media-keys.gschema.xml.in  com.kylinsec.kiran.power.gschema.xml.in  com.kylinsec.kiran.session-daemon.gschema.xml.in  com.kylinsec.kiran.settings.gschema.xml.in  com.kylinsec.kiran.xsettings.gschema.xml.in
data/services/: com.kylinsec.Kiran.SessionDaemon.Mouse.service.in  com.kylinsec.Kiran.SessionDaemon.Settings.service.in  com.kylinsec.Kiran.SessionDaemon.TouchPad.service.in  com.kylinsec.Kiran.SessionDaemon.XSettings.service.in  com.kylinsec.Kiran.SystemDaemon.Accounts.service.in  com.kylinsec.Kiran.SystemDaemon.Groups.service.in  com.kylinsec.Kiran.SystemDaemon.SystemInfo.service.in  com.kylinsec.Kiran.SystemDaemon.TimeDate.service.in  com.kylinsec.Kiran.SystemDaemon.Upgrade.service.in  com.kylinsec.Kiran.SystemDaemon.service.in  kiran-system-daemon.service.in
lib/: CMakeLists.txt  auth-manager.cpp  auth-manager.h  cc-dbus-error.cpp  cc-dbus-error.h  common.h  device-helper.cpp  device-helper.h  helper.cpp  helper.h  iso-translation.cpp  log.cpp  log.h  str-util.cpp  str-util.h
lib/base/: CMakeLists.txt  base.h  crypto-helper.cpp  crypto-helper.h  def.h  error.cpp  error.h  file-utils.cpp  file-utils.h  log.cpp  log.h  misc-utils.cpp  misc-utils.h  polkit-proxy.cpp  polkit-proxy.h  stl-helper.h  str-util.cpp  str-util.h  str-utils.cpp  str-utils.h
lib/dbus/: CMakeLists.txt  auth-manager.cpp  auth-manager.h  cc-dbus-error.cpp  cc-dbus-error.h  dbus.h
lib/display/: CMakeLists.txt  EWMH.cpp  EWMH.h
lib/input/: CMakeLists.txt  input-backend.cpp  input-backend.h  input-device.cpp  input-device.h
lib/iso/: CMakeLists.txt  iso-translation.cpp  iso-translation.h
lib/osdwindow/: CMakeLists.txt  osd-window.cpp  osd-window.h
lib/xcb/: CMakeLists.txt  EWMH.cpp  EWMH.h  xcb-connection.cpp  xcb-connection.h
plugins/: CMakeLists.txt
plugins/accounts/: CMakeLists.txt  accounts-common.cpp  accounts-common.h  accounts-dbus.cpp  accounts-dbus.h  accounts-manager.cpp  accounts-manager.h  accounts-plugin.cpp  accounts-plugin.h  accounts-util.cpp  accounts-util.h  accounts-wrapper.cpp  accounts-wrapper.h  accounts.json  accounts.ksd-plugin.in  accounts_i.h  com.kylinsec.Kiran.SystemDaemon.Accounts.User.xml  com.kylinsec.Kiran.SystemDaemon.Accounts.xml  com.unikylin.Kiran.System.Accounts.User.xml  com.unikylin.Kiran.System.Accounts.conf  com.unikylin.Kiran.System.Accounts.xml  com.unikylin.Kiran.SystemDaemon.Accounts.User.xml  com.unikylin.Kiran.SystemDaemon.Accounts.xml  config-accounts.h.in  passwd-process.cpp  passwd-process.h  passwd-wrapper.cpp  passwd-wrapper.h  user-cache.cpp  user-cache.h  user-classify.cpp  user-classify.h  user.cpp  user.h
plugins/appearance/: CMakeLists.txt  README.md  appearance-font.cpp  appearance-font.h  appearance-manager.cpp  appearance-manager.h  appearance-plugin.cpp  appearance-plugin.h  appearance.json  com.kylinsec.Kiran.SessionDaemon.Appearance.xml
plugins/audio/: CMakeLists.txt  audio-device.cpp  audio-device.h  audio.json  (+11 more)
resources/: CMakeLists.txt  kiran-session-daemon.gresource.xml
src/: CMakeLists.txt  com.kylinsec.Kiran.CCDaemon.Plugins.xml  com.kylinsec.Kiran.CCDaemon.xml  com.unikylin.Kiran.CCDaemon.xml  com.unikylin.Kiran.SystemDaemon.conf  com.unikylin.Kiran.SystemDaemon.gschema.xml  com.unikylin.Kiran.SystemDaemon.xml  common.h  config.h.in  helper.h  kiran-system-daemon.service.in  log.cpp  log.h  main-session.cpp  main-system.cpp  main.cpp  plugin-helper.cpp  plugin-helper.h  plugin-info.cpp  plugin-info.h  plugin-manager.cpp  plugin-manager.h  session-guarder.cpp  session-guarder.h  settings-manager.cpp  settings-manager.h
test/: CMakeLists.txt  README.md  main.cpp  test-system-daemon.cpp
(+553 files in other folders)
