# system
add_subdirectory(accounts)
add_subdirectory(groups)
add_subdirectory(timedate)
add_subdirectory(systeminfo)
add_subdirectory(greeter)
add_subdirectory(upgrade)

# session
add_subdirectory(audio)
add_subdirectory(appearance)
add_subdirectory(display)
add_subdirectory(mouse)
add_subdirectory(touchpad)
add_subdirectory(keyboard)
add_subdirectory(keybinding)
add_subdirectory(power)
add_subdirectory(settings)
add_subdirectory(clipboard)
